--- a/templates/choice_R5.html
+++ b/templates/choice_R5.html
@@ -20,7 +20,27 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
-<body>
+<body onload="available_options({{options}})">
+  <script type="text/javascript">
+  function available_options(op)
+  {
+    op2 = parseInt(op)
+    switch(op2)
+    {
+      case 0:
+        document.getElementById('check2').disabled = true;
+      case 1:
+        document.getElementById('check3').disabled = true;
+      case 2:
+        document.getElementById('check1').disabled = true;      
+      case 3:
+        document.getElementById('check4').disabled = true;      
+      default:
+        return;
+    }
+
+  }
+</script>
   <header>
   <nav class="cd-stretchy-nav">
     <a class="cd-nav-trigger" href="#0">
@@ -42,7 +62,7 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <h1>Make Selection:</h1>
-        <p>We're also going to pick one of three potential surveyors. You have {{}} Gold Dragons left after paying the Geotechnical Engineer. Use them to select a surveyor from the choices below:
+        <p>We're also going to pick one of three potential surveyors. You have {{money}} Gold Dragons left after paying the Geotechnical Engineer. Use them to select a surveyor from the choices below:
         </br>
         </br>
         Pile Foundation: Piles are structural members that are made of steel, concrete, and/or timber.
@@ -68,6 +88,8 @@ construction of stones bonded together with mortar is termed as stone masonry wh
   </div>
 </section>
 <section id="works" class="works section no-padding">
+  <form action="/choice" method="POST">
+
   <div class="container-fluid">
     <div class="row no-gutter">
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_5/work-1.jpg" alt="">
@@ -80,7 +102,8 @@ construction of stones bonded together with mortar is termed as stone masonry wh
         <!-- overlay --> 
         </a> 
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check1" />
+         <input type="radio" name="foundation" class="radio" id="check1" value = "pile"/>
+
        </div>  
       </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_5/work-2.jpg" alt="">
@@ -93,7 +116,8 @@ construction of stones bonded together with mortar is termed as stone masonry wh
         <!-- overlay --> 
         </a>
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check2" />
+         <input type="radio" name="foundation" class="radio" id="check2" value = "stone"/>
+
        </div>  
          </div>
       <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_5/work-3.jpg" alt="">
@@ -105,7 +129,8 @@ construction of stones bonded together with mortar is termed as stone masonry wh
         </div>
         </a> 
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check3" />
+         <input type="radio" name="foundation" class="radio" id="check3" value = "strip"/>
+
        </div>  
       </div>
          <div class="col-lg-3 col-md-6 col-sm-6 work"> <a href="#0" class="work-box"> <img src="../static/image/choice_5/work-4.jpg" alt="">
@@ -117,14 +142,17 @@ construction of stones bonded together with mortar is termed as stone masonry wh
         </div>
         </a>
         <div class"selection">
-         <input type="checkbox" class="checkbox" id="check4" />
+         <input type="radio" name="foundation" class="radio" id="check4" value = "raft"/>
+
        </div>  
          </div>  
     </div>
   </div>
      <div id="buttons">
-        <a href="dashboard.html" class="btn orange">Proceed</a>
+        <input type="submit" class ="btn orange" value="Finalize">
+
     </div>
+  </form>
 </section>
 <script src="../static/js/dash-jquery-2.1.4.js"></script>
 <script src="../static/js/dash-mainnav.js"></script>
